# VerificationBot

./: .gitignore  859425530931314718.txt  859426121979002890.txt  859426639590064149.txt  859428356147642409.txt  RolesBot.py  WarningBot.py  main.py  pyproject.toml
Javascript/: CodingGuide.txt  Stories.txt  index.js  package-lock.json  package.json
Javascript/commands/admin/: WarnCommand.js
Javascript/data/: users.json
Javascript/models/: CommandHelper.js  models.js
Javascript/models/managers/: UserManager.js
Python/: VerificationBot.py  main.py
