[tool.poetry]
name = "repl_python3_VerificationBot-2"
version = "0.1.0"
description = ""
authors = ["juledek <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.7.0"
discord = "^1.7.3"
replit = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
